// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <Spinner /> component it renders if loading is true 1`] = `
<img
  alt="Loading Spinner"
  class="sc-bdVaJa hbGCZo"
  height="40"
  src="ring.svg"
  width="40"
/>
`;

exports[`test <Spinner /> component it set the height and width to 50 1`] = `
<img
  alt="Loading Spinner"
  class="sc-bdVaJa hbGCZo"
  height="50"
  src="ring.svg"
  width="50"
/>
`;

exports[`test <Spinner /> component not renders if loading is true 1`] = `null`;
